# HPC_Map

./: .dockerignore  .gitattributes  .gitignore  FSD.md  Makefile  README.md  docker-compose.yml  new_FSD.md  pyproject.toml  render.yaml
backend/: Dockerfile
backend/app/: config.py  main.py
config/: default.yaml  graphhopper-truck.yml  graphhopper.yml  local.yaml
deploy/: prepare_render_assets.sh
deploy/render/api-data/: hpc_sites_100.geojson  hpc_sites_150.geojson  hpc_sites_250.geojson  hpc_sites_autobahn_direct_hpc.geojson  run_metadata.json  run_metadata_100.json  run_metadata_150.json  run_metadata_250.json  run_metadata_autobahn_direct_hpc.json
deploy/render/tileserver/: Dockerfile
deploy/render/tileserver/data/: config.json  hpc_sites.mbtiles
distance-core/: build.gradle.kts  gradlew  gradlew.bat  run_distance_core.sh  settings.gradle.kts
distance-core/src/main/java/com/hpcmap/distance/: DistanceCoreMain.java
distance-core/src/test/java/com/hpcmap/distance/: DistanceCoreMainTest.java
frontend/: Dockerfile  index.html  package.json
frontend/src/: main.js  styles.css
pipeline/: __init__.py  run_pipeline.py  stages.py  utils.py
scripts/: fetch_graphhopper.sh  run_distance_core.ps1  run_pipeline.ps1  start_graphhopper.ps1  start_graphhopper.sh
tools/graphhopper/: README.md
