[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-map"
version = "0.1.0"
description = "HPC motorway distance map prototype"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "requests>=2.32.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "shapely>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "pipeline*"]
